# spark_sql_ai_agent

./: README.md  pyproject.toml
input/: cte.sql
input/pickel/: spark_glossary.pkl
output/: spark_cte.sql
src/llm/: main.py
src/llm/core/: config.py  create_spark_glossary.py  lang.py
src/llm/core/tests/: valid_api_key.py
